# stigadigi

./: Cargo.toml  Embed.toml  Makefile  Makefile.rust.mk  README.md
.cargo/: config
avr/include/: arp.h  enc28j60.h  ethernet.h  global.h  ip.h  misc.h  spi.h
avr/src/: Makefile  layout.txt  main.c  misc.c
avr/src/dev/: enc28j60.c  enc28j60_int.h  enc28j60_reg.h  led.c  spi.c
avr/src/net/: arp.c  ethernet.c  ip.c
backend/: Cargo.toml  Makefile
backend/migrations/2020-12-17-083006_create_games/: up.sql
backend/migrations/2020-12-17-083010_create_players/: up.sql
backend/migrations/2020-12-18-085629_create_games/: down.sql  up.sql
backend/migrations/2020-12-18-085633_create_players/: down.sql  up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config  config.toml
firmware/src/: game.rs  main.rs  matrix.rs
src/: main.rs
web/: common.php  highscore.php  index.php  insert.php  register.php  register_match.php  register_player.php
