[package]
name = "stigadigi-backend"
version = "0.1.0"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "numeric", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
cloudevents-sdk = "0.3.0"
cloudevents-sdk-actix-web = "0.3.0"
cloudevents-sdk-reqwest = "0.3.0"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls"] }
actix-web = "^3"
actix-rt = "1"
serde_json = "^1.0"
serde = "^1.0"
url = "^2.1"
log = "0.4.0"
env_logger = "0.7.1"
