[package]
name = "stigadigi-firmware"
version = "0.2.0"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2021"

[dependencies]
defmt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
defmt-rtt = "0.4"

static_cell = "1"

microbit-bsp = "0.1.0"

embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.1.0", default-features = false }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833"] }
embassy-futures = { version = "0.1.0", default-features = false }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }


[features]
default = [
    "panic-reset"
]
debug = [
    "panic-probe",
    "embassy-executor/defmt",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0 
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
microbit-bsp = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "98278509c75c59d2049136bdbe45a1b022bf3c68" }
